@@ -22,7 +22,7 @@
 }
 \examples{
 \dontrun{
-  get_osm(complete_file(), source = osmsource_file("muc.osm"))
+    get_osm(complete_file(), source = osmsource_file("muc.osm"))
   }
 }
 \seealso{
